k8s/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: be-springboot
  template:
    metadata:
      labels:
        app: be-springboot
    spec:
      containers:
        - name: be-springboot
          image: your-dockerhub-username/be-springboot:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: be-springboot
spec:
  selector:
    app: be-springboot
  ports:
    - port: 8080
      targetPort: 8080
