k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: your.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fe-react
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: be-springboot
                port:
                  number: 8080
